# quorum

./: .env.example  .gitignore  CLAUDE.md  README.md  TASKS.md  architecture-detailed.d2  architecture.d2  architecture.excalidraw  pyproject.toml  rules.example.json  setup_mcp.sh  trade.sh
.claude/: settings.json
.claude/hooks/: post_tool_audit.py  pre_trade_validate.py  session_end.py  session_start.py
.claude/skills/: trading-council.md
.github/workflows/: ci.yml
cli/: main.py
desktop/: package-lock.json  package.json  tailwind.config.ts  tsconfig.main.json  vite.config.ts
desktop/main/: flask.ts  index.ts  preload.ts
desktop/src/: App.tsx  globals.css  index.html  main.tsx
docs/: MODES.md
quorum/: __init__.py  default_config.py
quorum/api/: __main__.py  app.py
quorum/backtest/: __init__.py  calibrate_conviction.py  quant_replay.py
quorum/council/: compact_summary.py
quorum/dataflows/: arb_scanner.py  cache.py  config.py  congress.py  interface.py  kalshi.py  reddit.py  regime.py  sec_filings.py  sector_rotation.py  stocktwits.py  y_finance.py
scripts/: com.quorum.scalp.plist  run-pipeline.sh  scalp_screen.py  start-scalp-day.sh  start-trading-day.sh
tests/: conftest.py  test_analytics_metrics.py  test_api_kill_switch.py  test_arb_scanner.py  test_brier_score.py  test_dataflows_config.py  test_env_overrides.py  test_executor.py  test_exit_strategy.py  test_live_risk.py  test_paper_broker.py  test_paper_validation.py  test_position_sizer.py  test_safe_ticker_component.py  test_safety.py
tradingagents/: default_config.py
(+217 files in other folders)
